feat: admin ui (#7)
* feat: admin ui

* feat: update ci

* feat: separate admin account to store as env key
